--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gapi-script": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-google-login": "^5.2.2"
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
